--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Module OW",
+  "name": "Module-OW",
   "version": "1.0.0",
   "main": "index.js",
   "description": "Connect to OpenWheater API",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "http": "^0.0.0",
+    "http-proxy-agent": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
     "url": "^0.11.0"
   }
